app/assets/stylesheets/framework/blank.scss
.blank-state-parent-container {
  display: flex;

  .section-container {
    display: flex;
    flex: 1;
    padding: 10px;
  }

  .section-body {
    width: 100%;
    height: 100%;
    border: 1px solid $border-color;
    border-radius: $border-radius-default;

    &.section-ee-trial {
      display: flex;
      align-items: center;
      justify-content: center;
    }
  }
}

.blank-state-welcome {
  text-align: center;

  .blank-state-text {
    margin-bottom: 0;
  }
}

.blank-state {
  padding-top: 20px;
  padding-bottom: 20px;
}

.blank-state.ee-trial {
  padding: 20px;
  text-align: center;
}

.blank-state-no-icon {
  padding-top: 40px;
  padding-bottom: 40px;
}

.blank-state-icon {
  padding-bottom: 20px;
  font-size: 56px;

  svg {
    display: block;
    margin: auto;
  }
}

.section-admin-welcome {
  /**
   * This is slight increase over 25% of col-md-offset-3 for
   * admin welcome page
   */
  .blank-state-icon.col-md-offset-3 {
    margin-left: 30%;
  }
}

.blank-state-title {
  margin-top: 0;
  margin-bottom: 10px;
  font-size: 18px;
}

.blank-state-text {
  margin-top: 0;
  margin-bottom: $gl-padding;
  font-size: 14px;

  > strong {
    font-weight: 600;
  }
}

.blank-state-welcome-title {
  font-size: 24px;
}

@media (max-width: $screen-md-min) {
  .blank-state-parent-container {
    &,
    .section-container {
      display: block;
    }
  }

  .blank-state {
    text-align: center;
  }

  .blank-state-icon {
    padding-bottom: 0;
  }

  .blank-state-body {
    margin-top: 15px;
  }
}

